--- a/emacs.d/thomasf-emacs.org
+++ b/emacs.d/thomasf-emacs.org
@@ -333,8 +333,8 @@ What is what?
 (global-yascroll-bar-mode 1)
 
 
-(custom-set-faces
-  '(region ((t (:background "#d33682" :foreground "#fdf6e3")))))
+;;(custom-set-faces
+;;  '(region ((t (:background "#d33682" :foreground "#fdf6e3")))))
 #+end_src
 
 ** TODO Auto-complete
