--- a/emacs.d/thomasf-emacs.org
+++ b/emacs.d/thomasf-emacs.org
@@ -331,6 +331,7 @@ What is what?
 
 ;(nyan-mode 1)
 (global-yascroll-bar-mode 1)
+#+end_src
 
 ** TODO Auto-complete
 Have to creae a default autocomplete conf thats better
