font-lock faces

--- a/emacs.d/thomasf-emacs.org
+++ b/emacs.d/thomasf-emacs.org
@@ -309,19 +309,19 @@ What is what?
      `(show-paren-match ((,class (:foreground ,cyan-hc :background ,cyan-lc :weight bold))))
 
      ;; maybe...
-     `(font-lock-builtin-face ((,class (:foreground ,blue))))
+     `(font-lock-builtin-face ((,class (:foreground ,blue :slant italic))))
      `(font-lock-comment-face ((,class (:foreground ,solarized-comments))))
      `(font-lock-comment-delimiter-face ((,class (:foreground ,solarized-comments))))
      `(font-lock-constant-face ((,class (:foreground ,blue :weight bold))))
-     `(font-lock-doc-face ((,class (:foreground ,cyan))))
+     `(font-lock-doc-face ((,class (:foreground ,cyan :slant italic))))
      `(font-lock-doc-string-face ((,class (:foreground ,blue))))
      `(font-lock-function-name-face ((,class (:foreground ,blue))))
-     `(font-lock-keyword-face ((,class (:foreground ,magenta :weight bold))))
+     `(font-lock-keyword-face ((,class (:foreground ,green :weight bold))))
      `(font-lock-negation-char-face ((,class (:foreground ,solarized-fg))))
      `(font-lock-preprocessor-face ((,class (:foreground ,blue))))
      `(font-lock-string-face ((,class (:foreground ,cyan))))
      `(font-lock-type-face ((,class (:foreground ,yellow))))
-     `(font-lock-variable-name-face ((,class (:foreground ,green))))
+     `(font-lock-variable-name-face ((,class (:foreground ,blue))))
      `(font-lock-warning-face ((,class (:foreground ,yellow :weight bold :underline t)))))
 
     (custom-theme-set-variables
@@ -356,6 +356,11 @@ What is what?
   (global-pretty-mode 1)
   ;;(nyan-mode 1)
   (global-yascroll-bar-mode 1)
+
+
+
+
+
 #+end_src
 
 ** TODO Auto-complete
