--- a/emacs.d/thomasf-emacs.org
+++ b/emacs.d/thomasf-emacs.org
@@ -680,12 +680,11 @@ This is provided by other things I use
 ** Generic hooks
 *** All modes hook
 #+begin_src emacs-lisp
-(defun my-all-modes-hook ()
-  "Hook that should be run every time an major mode is entered"
-  (turn-on-undo-tree-mode)
-  )
+  (defun my-all-modes-hook ()
+    "Hook that should be run every time an major mode is entered"
+    (turn-on-undo-tree-mode))
 
-(add-hook 'after-change-major-mode-hook  'my-all-modes-hook)
+  (add-hook 'after-change-major-mode-hook  'my-all-modes-hook)
 #+end_src
 *** Text mode hook
 #+begin_src emacs-lisp
